themes/Steak/static/style.css
body {
	font-family: sans-serif ;
	background: #161616 ;
	color: #C8fCEA ;
}

main {
	max-width: 800px ;
	margin: auto ;
}

a {
	color: #00C896 ;
}

img {
	max-width: 100% ;
}

header h1 {
	text-align: center ;
}

footer {
	text-align: center ;
	clear: both ;
}

/* For TAGLIST.HTML */
.taglist {
	text-align: center ;
	clear: both ;
}

/* For NEXTPREV.HTML */
#nextprev {
	/* The container for both the previous and next articles. */
}
#prevart {
	float: left ;
	text-align: left ;
}
#nextart {
	float: right ;
	text-align: right ;
}
#nextart,#prevart {
	max-width: 33% ;
}

